-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 17, 18
-
Component/s: hotspot
-
b15
Shenandoah heap dump was designed to be single-threaded, but JDK-8237354 broke the assumption.
- relates to
-
JDK-8273832 gc/shenandoah/TestJcmdHeapDump.java does not have a @requires vm.gc.shenandoah
-
- Resolved
-
-
JDK-8273482 Remove "foreground work" concept from WorkGang
-
- Resolved
-
-
JDK-8279540 Shenandoah: Should only clear CLD::_claim_strong mark for strong CLD iterations
-
- Resolved
-
-
JDK-8237354 Add option to jcmd to write a gzipped heap dump
-
- Resolved
-
(2 links to)