8273559: Shenandoah: Shenandoah should support multi-threaded heap dump